--- a/NewsPaper/locale/ru/LC_MESSAGES/django.po
+++ b/NewsPaper/locale/ru/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-01-22 09:24+0000\n"
+"POT-Creation-Date: 2023-01-22 10:40+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -19,6 +19,15 @@ msgstr ""
 "Plural-Forms: nplurals=4; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && "
 "n%10<=4 && (n%100<12 || n%100>14) ? 1 : n%10==0 || (n%10>=5 && n%10<=9) || "
 "(n%100>=11 && n%100<=14)? 2 : 3);\n"
+
+#: D5/models.py:36
+msgid "category name"
+msgstr "имя категории"
+
+#: D5/models.py:136
+msgctxt "help text for MyModel model"
+msgid "This is the help text"
+msgstr "Это вспомогательный текст"
 
 #: D5/views.py:153
 msgid "Hello world"
